SFDCProject/src/objects/Proposal_Document_Type__c.object
<CustomObject>
    <fields>
        <fullName>Document_Classification__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Classification</label>
        <referenceTo>Document_Classification__c</referenceTo>
        <relationshipLabel>Proposal Document Types</relationshipLabel>
        <relationshipName>Proposal_Document_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Type_Name__c</fullName>
        <formula>Document_Classification__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposal_Document_Type_Name__c</fullName>
        <externalId>true</externalId>
        <label>Proposal Document Type Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Proposal Document Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Document_Classification__c</columns>
        <columns>NAME</columns>
        <columns>Proposal_Document_Type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Proposal Document Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Proposal Document Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>